Data folder Typos Fixed save method Added TODO.txt

--- a/Uppgift3/Uppgift3.csproj
+++ b/Uppgift3/Uppgift3.csproj
@@ -60,6 +60,7 @@
     </Content>
     <Content Include="bankdata.txt" />
     <Content Include="README.txt" />
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
