--- a/Uppgift3/Uppgift3.csproj
+++ b/Uppgift3/Uppgift3.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -61,6 +62,7 @@
     <Content Include="bankdata.txt" />
     <Content Include="README.txt" />
     <Content Include="TODO.txt" />
+    <Content Include="transaktionslogg.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
