Added unittesting, moved things to Data folder, bugfixes, fixed defaultpath

--- a/Uppgift3/Uppgift3.csproj
+++ b/Uppgift3/Uppgift3.csproj
@@ -56,13 +56,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bankdata-small.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bankdata.txt" />
-    <Content Include="README.txt" />
     <Content Include="TODO.txt" />
-    <Content Include="transaktionslogg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
