--- a/BankTests/BankTests.csproj
+++ b/BankTests/BankTests.csproj
@@ -61,6 +61,12 @@
       <Name>Uppgift3</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\bankdata-small.txt" />
+    <Content Include="Data\bankdata.txt" />
+    <Content Include="Data\README.txt" />
+    <Content Include="Data\transaktionslogg.txt" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
